Coding with follow along. Just before adding Axios

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
     transform: rotate(360deg);
   }
 }
-
+/* copied from https://developers.google.com/maps/documentation/javascript/tutorial */
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 #map {
