--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,82 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
+/* Filter input text box */
+.places-filter {
+  width: 100%;
+  padding: 0.67em;
+  font-size: 1rem;
+  font-family: 'Oxygen', sans-serif;
+}
+
+.places-list {
+  padding: 0;
+}
+
+.place-list-item {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.place-list-item-button {
+  padding: 0.67em;
+  margin-top: 1em;
+  border-radius: 8px;
+  cursor: pointer;
+  background: #d7dabc;
+  font-size: 1rem;
+  font-family: 'Oxygen', sans-serif;
+}
+
+/* ------------------------------------------
+ * react-burger-menu
+ * ------------------------------------------ */
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 2.25rem;
+  height: 1.875rem;
+  left: 1rem;
+  top: 1rem;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #f7b247;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #f7b247;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #443219;
+  padding: 2.5em 1em 0;
+  font-size: 1.15em;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0) !important;
+}
