lots of source comments.

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,8 @@ html, body {
 }
 
 /* ------------------------------------------
- * react-burger-menu
+ * react-burger-menu from 
+ * https://github.com/negomi/react-burger-menu
  * ------------------------------------------ */
 
 /* Position and sizing of burger button */
